namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-namespace
  labels:
    name: dev-namespace
    environment: development
