deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "2048-deployment"
  namespace: "dev-namespace"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: "2048"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: hmk-uk-storage

      volumes:
      - name: hmk-uk-storage
        persistentVolumeClaim:
          claimName: hmk-uk-pvc
