svc.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: dev-namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: "2048"
  ports:
    - port: 80
      targetPort: 80
